Update about OCR and Check similarity'

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,3 +18,4 @@ ocr.service.url=http://ocr-service:5000/ocr/upload
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 server.port=8080
+file.upload.dir=${FILE_STORAGE_PATH}
