--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: Password123!
       OCR_SERVICE_URL: http://ocr-service:5000/ocr/upload
+      FILE_STORAGE_PATH: /app/uploads
+    volumes:
+      - ./uploads:/app/uploads
     networks:
       - vts1-network
 
